Improve design of navbar and fix several issues with files
- Removed title navbar
- Main navbar has a bottom border
- Hovering over navbar links shows a background instead of a border
- Removed extra padding around a list to increase readability
- Removed copyright bar in contact page until a sane one is made
- Fixed every file using wrong line endings
- Contact page uses the correct font
- Removed unused css files

--- a/css/copyright.css
+++ b/css/copyright.css
@@ -1,17 +1,3 @@
-:root {
-  --bg-color: #1F1F1F;
-  --secondary-bg-color: #1A1A1A;
-  --fg-color: #FAFAFA;
-  --secondary-fg-color: #707070;
-  --highlight-color:#3C8CE8;
-  --hover-color: #6E6E6E;;
-  --border-color: #2D2D2D;
-  --button-color: #2B2B2B;
-  --blue: #0000FF;
-  --white: #FFFFFF;
-}
-
-
 footer {
     font-size: 0.8em;
     position: fixed;
