--- a/css/master.css
+++ b/css/master.css
@@ -1,11 +1,10 @@
 :root {
   --bg-color: #1F1F1F;
   --secondary-bg-color: #1A1A1A;
-  --fg-color: #FAFAFA;
-  --secondary-fg-color: #707070;
-  --highlight-color:#3C8CE8;
-  --hover-color: #6E6E6E;;
-  --border-color: #2D2D2D;
+  --fg-color: #EAEAEA;
+  --secondary-fg-color: #C4C4C4;
+  --highlight-color: #3B7CD1;
+  --hover-color: #3B3B3B;
   --button-color: #2B2B2B;
   --blue: #0000FF;
   --white: #FFFFFF;
@@ -22,6 +21,10 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     color: var(--fg-color);
+}
+
+ul {
+    margin-top: 2%;
 }
 
 a, a:hover {
@@ -56,4 +59,9 @@ a, a:hover {
 .content p, .content ul, .content ol {
 	font-size: 1.2em;
     color: var(--fg-color);
+}
+
+.subtitle {
+    display: inline;
+    border-bottom: 2px solid var(--white);
 }
